--- a/ru.taximaxim.codekeeper.cli.tests/build.properties
+++ b/ru.taximaxim.codekeeper.cli.tests/build.properties
@@ -4,6 +4,6 @@ output.. = target/
 bin.includes = META-INF/,\
                .,\
                resources/
-additional.bundles = org.junit.platform.engine,\
-                     org.junit.jupiter.engine,\
-                     org.junit.platform.commons
+additional.bundles = junit-platform-engine,\
+                     junit-jupiter-engine,\
+                     junit-platform-commons
