--- a/ru.taximaxim.codekeeper.core.tests/build.properties
+++ b/ru.taximaxim.codekeeper.core.tests/build.properties
@@ -2,6 +2,6 @@ source.. = src/main/java/,\
            src/main/resources/
 bin.includes = META-INF/,\
                .
-additional.bundles = org.junit.platform.engine,\
-                     org.junit.jupiter.engine,\
-                     org.junit.platform.commons
+additional.bundles = junit-platform-engine,\
+                     junit-jupiter-engine,\
+                     junit-platform-commons
