--- a/ru.taximaxim.codekeeper.ui.tests/build.properties
+++ b/ru.taximaxim.codekeeper.ui.tests/build.properties
@@ -1,10 +1,9 @@
 source.. = src/,\
            resources/
+output.. = target/
 bin.includes = META-INF/,\
                .,\
                resources/
-jars.compile.order = .
-jars.extra.classpath = platform:/fragment/ru.taximaxim.codekeeper.core.tests
-additional.bundles = org.junit.platform.engine,\
-                     org.junit.jupiter.engine,\
-                     org.junit.platform.commons
+additional.bundles = junit-platform-engine,\
+                     junit-jupiter-engine,\
+                     junit-platform-commons
