PGCK-436 PG 17: Snapshot PG 17

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -409,6 +409,9 @@
                     commandId="ru.taximaxim.codekeeper.ui.command.GetSystemObjects"
                     label="%command.commandname.GetSystemObjects"
                     style="push">
+                <visibleWhen
+                     checkEnabled="true">
+                </visibleWhen>
                 </command>
                 <command
                     commandId="ru.taximaxim.codekeeper.ui.command.OpenDocs"
