--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplateMs.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplateMs.properties
@@ -1,7 +1,17 @@
 
+create.assembly.desc = CREATE ASSEMBLY statement
+
 create.function.desc = CREATE FUNCTION statement (return scalar)
 
 create.function2.desc = CREATE FUNCTION statement (return TABLE)
+
+create.index.desc = CREATE INDEX statement
+
+create.role.desc = CREATE ROLE statement
+
+create.user.desc = CREATE USER statement
+
+create.trigger.desc = CREATE TRIGGER statement
 
 create.sequence.desc = CREATE SEQUENCE statement
 
