PGCK-506 added unit tests for ui

--- a/ru.taximaxim.codekeeper.ui.tests/.classpath
+++ b/ru.taximaxim.codekeeper.ui.tests/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src">
+	<classpathentry kind="src" path="src/main/java">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="resources">
+	<classpathentry kind="src" path="src/main/resources">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
