--- a/ru.taximaxim.codekeeper.ui.tests/build.properties
+++ b/ru.taximaxim.codekeeper.ui.tests/build.properties
@@ -1,9 +1,7 @@
-source.. = src/,\
-           resources/
-output.. = target/
+source.. = src/main/java/,\
+           src/main/resources/
 bin.includes = META-INF/,\
-               .,\
-               resources/
+               .
 additional.bundles = junit-platform-engine,\
                      junit-jupiter-engine,\
                      junit-platform-commons
