PGCK-572 added github action

--- a/pom.xml
+++ b/pom.xml
@@ -53,16 +53,11 @@
         <maven.surefire.version>3.5.2</maven.surefire.version>
         <maven.enforcer.version>3.5.0</maven.enforcer.version>
         <maven.jarsigner.version>3.1.0</maven.jarsigner.version>
-
-        <keystore>/tmp/keystore.jks</keystore>
     </properties>
 
     <profiles>
         <profile>
-            <id>jenkins</id>
-            <properties>
-                <target.definition.file>app</target.definition.file>
-            </properties>
+            <id>deploy-github</id>
             <build>
                 <plugins>
                     <plugin>
@@ -88,6 +83,13 @@
                             </execution>
                         </executions>
                     </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jenkins</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
