--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,6 @@
         <module>ru.taximaxim.codekeeper.mainapp/updatesite</module>
         <module>ru.taximaxim.codekeeper.mainapp/product/rcp</module>
         <module>ru.taximaxim.codekeeper.mainapp/product/standalone</module>
-        <module>ru.taximaxim.codekeeper.mainapp/deploy</module>
     </modules>
 
     <properties>
@@ -53,13 +52,11 @@
         <maven.surefire.version>3.5.2</maven.surefire.version>
         <maven.enforcer.version>3.5.0</maven.enforcer.version>
         <maven.jarsigner.version>3.1.0</maven.jarsigner.version>
-
-        <keystore>/tmp/keystore.jks</keystore>
     </properties>
 
     <profiles>
         <profile>
-            <id>jenkins</id>
+            <id>deploy-github</id>
             <build>
                 <plugins>
                     <plugin>
@@ -85,6 +82,13 @@
                             </execution>
                         </executions>
                     </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jenkins</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
